tcs.tf
provider "aws" {
  region     = "us-east-2"
  access_key = "AKIA23PKJ7H3APF5YEMR"
  secret_key = "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"
}

data "aws_availability_zone" "all" {
  name = "us-east-2b"
}

### Creating EC2 instance

resource "aws_instance" "tcs_monitoring_server" {
  ami = "ami-0a91cd140a1fc148a"
  key_name               = "novbatch"
  vpc_security_group_ids = ["${aws_security_group.instance.id}"]
  source_dest_check = false
  instance_type = "t2.micro"
tags = {
    Name = "tcs_monitoring_server"
  }
}

### Creating Security Group for EC2
resource "aws_security_group" "instance" {
  name = "tcs_sg"
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 8080
    to_port = 8080
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
## Creating Launch Configuration
resource "aws_launch_configuration" "tcs_lc" {
  image_id               = "ami-0a91cd140a1fc148a"
  instance_type          = "t2.micro"
  security_groups        = ["${aws_security_group.instance.id}"]
  key_name               = "novbatch"
  user_data = <<-EOF
              #!/bin/bash
              echo "Hello, World" > index.html
              nohup busybox httpd -f -p 8080 &
              EOF
  lifecycle {
    create_before_destroy = true
  }
}

## Creating AutoScaling Group
resource "aws_autoscaling_group" "tcs_asg" {
  launch_configuration = "${aws_launch_configuration.tcs_lc.id}"
  availability_zones = ["${data.aws_availability_zone.all.name}"]
  min_size = 1
  max_size = 3
  load_balancers = ["${aws_elb.tcs_elb.name}"]
  health_check_type = "ELB"
  tag {
    key = "Name"
    value = "tcs_app"
    propagate_at_launch = true
  }
}

resource "aws_autoscaling_policy" "web_policy_up" {
  name = "web_policy_up"
  scaling_adjustment = 1
  adjustment_type = "ChangeInCapacity"
  cooldown = 300
  autoscaling_group_name = "${aws_autoscaling_group.tcs_asg.name}"
}

resource "aws_cloudwatch_metric_alarm" "web_cpu_alarm_up" {
  alarm_name = "web_cpu_alarm_up"
  comparison_operator = "GreaterThanOrEqualToThreshold"
  evaluation_periods = "2"
  metric_name = "CPUUtilization"
  namespace = "AWS/EC2"
  period = "120"
  statistic = "Average"
  threshold = "60"

  dimensions = {
    AutoScalingGroupName = "${aws_autoscaling_group.tcs_asg.name}"
  }

  alarm_description = "This metric monitor EC2 instance CPU utilization"
  alarm_actions = [ aws_autoscaling_policy.web_policy_up.arn ]
}

## Security Group for ELB
resource "aws_security_group" "elb" {
  name = "tcs_elb"
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
### Creating ELB
resource "aws_elb" "tcs_elb" {
  name = "tcs-elb"
  security_groups = ["${aws_security_group.elb.id}"]
  availability_zones = ["${data.aws_availability_zone.all.name}"]
  health_check {
    healthy_threshold = 2
    unhealthy_threshold = 2
    timeout = 3
    interval = 30
    target = "HTTP:8080/"
  }
  listener {
    lb_port = 80
    lb_protocol = "http"
    instance_port = "8080"
    instance_protocol = "http"
  }
}
